Update email module
